Misc cleanups.